[project]
name = "torchoutil"
authors = [
    {name = "Étienne Labbé (Labbeti)", email = "labbeti.pub@gmail.com"},
]
description = "Collection of functions and modules to help development in PyTorch."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["pytorch", "deep-learning"]
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
maintainers = [
    {name = "Étienne Labbé (Labbeti)", email = "labbeti.pub@gmail.com"},
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://pypi.org/project/torchoutil/"
Documentation = "https://torchoutil.readthedocs.io/"
Repository = "https://github.com/Labbeti/torchoutil.git"
Changelog = "https://github.com/Labbeti/torchoutil/blob/main/CHANGELOG.md"
Tracker = "https://github.com/Labbeti/torchoutil/issues"

[project.scripts]
torchoutil-info = "torchoutil.info:print_install_info"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["torchoutil*"]  # package names should match these glob patterns (["*"] by default)

[tool.setuptools.dynamic]
version = {attr = "torchoutil.__version__"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {extras = { file = ["requirements-extras.txt"] }, dev = { file = ["requirements-dev.txt"] }}

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
pythonVersion = "3.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
